--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,13 +1,51 @@
 .home-component {
     width: 100%;
     height: 100%;
+    &.full {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+    }
     .search-box {
-        height: 3rem;
+        height: 7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+        font-size: 2rem;
+        label {
+            padding: 12px 12px 12px 0;
+            display: inline-block;
+            input[type=text], select, textarea {
+                width: 100%;
+                padding: 12px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                resize: vertical;
+              }
+            input[type=submit] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+            }
+            input[type=submit]:hover {
+            background-color: #45a049;
+            }
+        }
+     
     }
     .beer-card-container {
-        height: calc(100% - 3rem - 50px);
+        height: calc(100% - 7rem - 50px - 50px);
         width: 100%;
-        background-color: red;
+        background-color: #fff;
         overflow: hidden;
         overflow-y: auto;
         overflow-x: auto;
@@ -18,18 +56,30 @@
         img {
             width: 3rem;
             height: 3rem;
+            margin-bottom: 10px;
         }
         .beer-card {
             position: relative;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            align-items: flex-start;
+            justify-content: flex-start;
             flex-direction: column;
-            background-color: green;
+            background-color: #f8f7de;
             margin: 1rem;
             width: 20%;
+            border-radius: 10px;
+            padding: 1rem 10px 10px 2rem;
             min-width: 15rem;
             text-align: right;
+            .beer-info {
+                display: flex;
+                align-items: flex-start;
+                justify-content: flex-start;
+                span {
+                    text-align: right;
+                    word-break: break-word;
+                }
+            }
             
         }
     }
@@ -38,7 +88,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgb(131, 131, 131);
+        background: #f2f2f2;
         display: flex;
         align-items: center;
         justify-content: center;
